proxy && center && cache hit rate

--- a/dashboard/templates/joint/body_big_line_chart_for_one_metrics_tag.html.j2
+++ b/dashboard/templates/joint/body_big_line_chart_for_one_metrics_tag.html.j2
@@ -19,6 +19,10 @@
                 dataView: {
                     readOnly: true
                 },
+                restore: {},
+                saveAsImage: {
+                    name:"{{ append_info }}_{{ name }}"
+                }
             },
             right:'10%'
         },
