--- a/dashboard/templates/joint/body_small_line_chart_for_one_metrics_tag_one_ip.html.j2
+++ b/dashboard/templates/joint/body_small_line_chart_for_one_metrics_tag_one_ip.html.j2
@@ -18,6 +18,10 @@
                 dataView: {
                     readOnly: true
                 },
+                restore: {},
+                saveAsImage: {
+                    name:"{{ append_info }}_{{ name }}"
+                }
             },
             right:'10%'
         },
