--- a/dashboard/templates/joint/body_center_line_chart_for_vnode_status.html.j2
+++ b/dashboard/templates/joint/body_center_line_chart_for_vnode_status.html.j2
@@ -19,6 +19,10 @@
                 dataView: {
                     readOnly: true
                 },
+                restore: {},
+                saveAsImage: {
+                    name:"{{ append_info }}_{{ name }}"
+                }
             },
             right:'10%'
         },
