--- a/dashboard/templates/joint/body_big_line_chart_for_xsync.html.j2
+++ b/dashboard/templates/joint/body_big_line_chart_for_xsync.html.j2
@@ -11,6 +11,7 @@
             ],
             axisType: 'category',
             autoPlay: true,
+            loop: false,
             playInterval: 2000,
         },
         title: {
