store hit rate: add toolbox && fix click logical

--- a/dashboard/templates/joint/body_big_line_chart_for_cache_rate.html.j2
+++ b/dashboard/templates/joint/body_big_line_chart_for_cache_rate.html.j2
@@ -20,6 +20,22 @@
             title: {
                 subtext: 'from {{ name }} ',
             },
+            toolbox:{
+                show: true,
+                feature: {
+                    dataZoom:{
+                        yAxisIndex: "none"
+                    },
+                    dataView: {
+                        readOnly: true
+                    },
+                    restore: {},
+                    saveAsImage: {
+                        name:"{{ name }}"
+                    }
+                },
+                right:'10%'
+            },
             tooltip: {
                 {# trigger: 'axis',
                 axisPointer: {            // 坐标轴指示器，坐标轴触发有效
