--- a/dashboard/templates/joint/body_big_line_chart_for_compare_cache_rate.html.j2
+++ b/dashboard/templates/joint/body_big_line_chart_for_compare_cache_rate.html.j2
@@ -41,20 +41,6 @@
                 axisPointer: {            // 坐标轴指示器，坐标轴触发有效
                     type: 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
                 },
-                {# formatter: function (params) {
-                    if (params.constructor.toString().indexOf("Array")>-1)
-                    {
-                        return params[0].name + '<br/>' + 
-                        var min = params[0];
-                        var max = params[1];
-                        var min_value = params[0].value
-                        var max_value = min_value + params[1].value
-                        var other_max_value = params[2].value+params[3].value
-                        return max.name + '<br/>' + max.seriesName + ' : ' + min_value + ' - ' + max_value + '<br/>' + params[3].seriesName + ' : ' + params[2].value + ' - ' + other_max_value;
-                    }
-                    // timeline:
-                    return params.name;
-                } #}
             },
             grid: {
                 top: '8%',
@@ -96,10 +82,10 @@
                 type: 'value'
             },
             series: [
-                {name: 'node1_hit', type: 'bar'},
-                {name: 'node1_miss', type: 'bar'},
-                {name: 'node2_hit', type: 'bar'},
-                {name: 'node2_miss', type: 'bar'},
+                {name: '{{public_ip}}_hit', type: 'bar'},
+                {name: '{{public_ip}}_miss', type: 'bar'},
+                {name: '{{o_public_ip}}_hit', type: 'bar'},
+                {name: '{{o_public_ip}}_miss', type: 'bar'},
             ],
         },
         options: [
@@ -108,7 +94,7 @@
                 title:{text: '{{ ts }}'},
                 series:[
                     {
-                        name: 'node1_hit',
+                        name: '{{public_ip}}_hit',
                         type: 'bar',
                         stack: 'st1',
                         data:[
@@ -116,7 +102,7 @@
                         ]
                     },
                     {
-                        name: 'node1_miss',
+                        name: '{{public_ip}}_miss',
                         type: 'bar',
                         stack: 'st1',
                         data:[
@@ -124,7 +110,7 @@
                         ]
                     },
                     {
-                        name: 'node2_hit',
+                        name: '{{o_public_ip}}_hit',
                         type: 'bar',
                         stack: 'st2',
                         data:[
@@ -132,7 +118,7 @@
                         ]
                     },
                     {
-                        name: 'node2_miss',
+                        name: '{{o_public_ip}}_miss',
                         type: 'bar',
                         stack: 'st2',
                         data:[
