add p2pkadinfo && p2pbroadcast consumer

--- a/dashboard/templates/query_center/aggregated_by_ip.html.j2
+++ b/dashboard/templates/query_center/aggregated_by_ip.html.j2
@@ -107,8 +107,8 @@
 
     <select class="database_selector">
         <option>choose database</option>
-        {%- for database in database_list -%}
-        <option value="{{database}}">{{database}}</option>
+        {%- for info in database_list -%}
+        <option value="{{info.name}}">{{info.time}}:{{info.name}}</option>
         {%- endfor -%}
     </select>
 
