--- a/dashboard/templates/query_center/aggregated_by_tag.html.j2
+++ b/dashboard/templates/query_center/aggregated_by_tag.html.j2
@@ -119,8 +119,8 @@
 <div class = "function_selectors">
     <select class="database_selector">
         <option>choose database</option>
-        {%- for database in database_list -%}
-        <option value="{{database}}">{{database}}</option>
+        {%- for info in database_list -%}
+        <option value="{{info.name}}">{{info.time}}:{{info.name}}</option>
         {%- endfor -%}
     </select>
 
