update txpool metrics

--- a/dashboard/templates/joint/body_big_line_chart_for_compare_cache_rate.html.j2
+++ b/dashboard/templates/joint/body_big_line_chart_for_compare_cache_rate.html.j2
@@ -58,12 +58,12 @@
             },
             dataZoom: [{
                 type: 'slider',
-                show: true, //flase直接隐藏图形
+                show: true, 
                 xAxisIndex: [0],
-                left: '4%', //滚动条靠左侧的百分比
+                left: '4%', 
                 bottom: '8%',
-                start: 0,//滚动条的起始位置
-                end: 100 //滚动条的截止位置（按比例分割你的柱状图x轴长度）
+                start: 0,
+                end: 100 
             }],
             xAxis: {
                 type: 'category',
