--- a/dashboard/templates/joint/body_big_line_chart_for_compare_txpool.html.j2
+++ b/dashboard/templates/joint/body_big_line_chart_for_compare_txpool.html.j2
@@ -15,7 +15,7 @@
                 loop: false,
                 playInterval: 2000,
                 left: '0%',
-                right: '20%',
+                right: '4%',
             },
             title: {
                 subtext: 'from {{ name }} ',
@@ -34,31 +34,15 @@
                         name:"{{ name }}"
                     }
                 },
-                right:'10%'
+                right:'4%'
             },
             tooltip: {
-                {# trigger: 'axis',
-                axisPointer: {            // 坐标轴指示器，坐标轴触发有效
-                    type: 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
-                }, #}
-                {# formatter: function (params) {
-                    if (params.constructor.toString().indexOf("Array")>-1)
-                    {
-                        var min = params[0];
-                        var max = params[1];
-                        var min_value = params[0].value
-                        var max_value = min_value + params[1].value
-                        var other_max_value = params[2].value+params[3].value
-                        return max.name + '<br/>' + max.seriesName + ' : ' + min_value + ' - ' + max_value + '<br/>' + params[3].seriesName + ' : ' + params[2].value + ' - ' + other_max_value;
-                    }
-                    // timeline:
-                    return params.name;
-                } #}
+
             },
             grid: {
-                top: '30%',
+                top: '10%',
                 left: '0%',
-                right: '20%',
+                right: '4%',
                 bottom: '12%',
                 containLabel: true,
                 tooltip:{
@@ -78,18 +62,7 @@
                 start: 0,
                 end: 100 
             }],
-            legend: {
-                type: 'scroll',
-                orient: 'vertical',
-                right: '0%',
-                top: '5%',
-                bottom: '20%',
-                data: [
-                    {%- for _tag in tag_list -%}
-                    '{{ _tag }}',
-                    {%- endfor -%}
-                ],
-            },
+            
             xAxis: {
                 type: 'category',
                 splitLine: { show: false },
@@ -107,43 +80,25 @@
                 type: 'value'
             },
             series: [
-                {name: 'hit', type: 'bar'},
-                {name: 'miss', type: 'bar'},
-                {
-                    name: '占比',
-                    type: 'pie',
-                    center: ['60%', '15%'],
-                    radius: '28%',
-                    z: 100
-                }
+                {name: 'n1_value', type:'bar'},
+                {name: 'n2_value', type:'bar'},
             ],
         },
         options: [
-            {% for ts,item in res_map.items() -%}
+            {%- for ts,item in res_map.items() -%}
             {
                 title:{text: '{{ ts }}'},
                 series:[
                     {
-                        name: 'hit',
+                        name: '{{p_ip}}',
                         type: 'bar',
-                        stack: 'st',
-                        data:[
-                            {{ item['hit'] }}
-                        ]
+                        data: [{{item['n1_value']}}]
                     },
                     {
-                        name: 'miss',
+                        name: '{{o_ip}}',
                         type: 'bar',
-                        stack: 'st',
-                        data:[
-                            {{ item['miss'] }}
-                        ]
+                        data: [{{item['n2_value']}}]
                     },
-                    {
-                        data:[
-                            {{item['sum']}}
-                        ],
-                    }
                 ]
             },
             {%- endfor %}
