--- a/dashboard/templates/query_center/aggregated_by_tag.html.j2
+++ b/dashboard/templates/query_center/aggregated_by_tag.html.j2
@@ -128,6 +128,7 @@
         <option>counter</option>
         <option>timer</option>
         <option>flow</option>
+        <option>array_counter</option>
     </select>
 
     <select class="category_selector">
