--- a/dashboard/templates/query_center/special_packet_xsync_interval.html.j2
+++ b/dashboard/templates/query_center/special_packet_xsync_interval.html.j2
@@ -26,11 +26,11 @@
             table_address = $(".table_address_selector").val()
             full_address = ""
             if(table_type == "beacon"){
-                full_address = "Ta00013T7BKn5pP8Zi3K5z2Z5BQuSXTf5u37Se79x" + table_address
+                full_address = "Ta0001" + table_address
             }else if (table_type == "zec"){
-                full_address = "Ta00025E3y1TBsbnvZHcq1eELBBQH4D5tFbg1jQqY" + table_address
+                full_address = "Ta0002" + table_address
             }else if (table_type == "sharding"){
-                full_address = "Ta0000gRD2qVpp2S7UpjAsznRiRhbE1qNnhMbEDp" + table_address
+                full_address = "Ta0000" + table_address
             }
             query_sync_path = "/query_xsync_interval/?database="+database+"&table_address="+full_address
             console.log(query_sync_path)
