--- a/dashboard/templates/joint/body_big_line_chart_for_one_metrics_tag.html.j2
+++ b/dashboard/templates/joint/body_big_line_chart_for_one_metrics_tag.html.j2
@@ -31,19 +31,21 @@
             position: [20, 80],
             formatter: function(params){
                 let astr = '<div>'+params[0].axisValue+'</div>'
+                params = params.filter((a)=>{return typeof(a.data)!="undefined"});
+                params.sort(function(a,b){return b.data-a.data});
                 params.forEach(ele => {
                 const data = ele.data
-                if(data){
+                {# if(data){ #}
                     astr += `
-                        <div style="display: block;height:20px;width:50%;float:left;">
+                        <div style="display: block;height:20px;width:33%;float:left;">
                         <i style="width: 10px;height: 10px;display: inline-block;background: ${ele.color};border-radius: 10px;"></i>
                         <span>${ele.seriesName}: ${data}</span>
                         </div>
                     `
-                    }
+                    {# } #}
                 }
                 )
-                const b = '<div style="width: 600px;">' + astr + '<div>'
+                const b = '<div style="width: 800px;">' + astr + '<div>'
                 return b
             }
         },
