add counter rate

--- a/dashboard/templates/joint/body_small_line_chart_for_one_metrics_tag_one_ip.html.j2
+++ b/dashboard/templates/joint/body_small_line_chart_for_one_metrics_tag_one_ip.html.j2
@@ -45,7 +45,8 @@
             ],
             top:"10%",
             selected:{
-                'count':false
+                'count':false,
+                'rate':false
             }
         },
         grid:{
